--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,14 +188,12 @@ p {
             top: 0;
             left: 0;
             bottom: 0;
-            overflow: hidden;
             right: 50%; }
           .preloader .loader_34 .ytp-spinner .ytp-spinner-container .ytp-spinner-rotator .ytp-spinner-right {
             position: absolute;
             top: 0;
             right: 0;
             bottom: 0;
-            overflow: hidden;
             left: 50%; }
     .preloader .loader_34 .ytp-spinner-circle {
       box-sizing: border-box;
@@ -549,7 +547,6 @@ p {
   width: 100%;
   margin-top: 90px;
   position: relative;
-  overflow: hidden;
   background-color: #fbfbfb; }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .header-content {
@@ -1151,9 +1148,9 @@ p {
   box-shadow: 0px 0px 15px 0px rgba(152, 152, 152, 0.25);
   position: relative;
   border-radius: 5px;
-  overflow: hidden; }
+  overflow: scroll; }
   .single-blog .blog-image {
-    overflow: hidden; }
+    overflow: scroll; }
     .single-blog .blog-image img {
       width: 100%;
       -webkit-transition: all 0.3s ease-out 0s;
@@ -1727,4 +1724,16 @@ p.form-message.success, p.form-message.error {
       line-height: 54px;
       cursor: pointer; }
 
+    .simulation {
+      position: fixed;
+      top: 90%;
+      left: 50%;
+      /* bring your own prefixes */
+      transform: translate(-50%, -50%);
+    }
+
 /*# sourceMappingURL=style.css.map */
+
+body {
+  overflow:scroll;
+}
