--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1725,7 +1725,9 @@ p.form-message.success, p.form-message.error {
       cursor: pointer; }
 
     .simulation {
-      position: fixed;
+      position: absolute;
+      padding-top: 100px;
+      padding-bottom: 100px;
       top: 90%;
       left: 50%;
       /* bring your own prefixes */
