rectangle padding bottom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1725,9 +1725,11 @@ p.form-message.success, p.form-message.error {
       cursor: pointer; }
 
     .simulation {
+      
       margin: auto;
       width: 50%;
       padding: 10px;
+      padding-bottom: 200px;
     }
 
 /*# sourceMappingURL=style.css.map */
